<resources>
    <string name="app_name">BestFood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_icon">Search Icon</string>
    <string name="home">Home</string>
    <string name="random_meal_image">Random Meal Image</string>
    <string name="what_would_you_like_to_eat">What would you like to eat</string>
    <string name="over_popular_items">Over popular items</string>
    <string name="categories">Categories</string>
    <string name="refresh_icon">Refresh Icon</string>
    <string name="meal_detail">Meal Detail</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="instructions">"- Instructions: "</string>
    <string name="youtube_image">Youtube Image</string>

    <string name="meal_detail_category">Category: %1$s</string>
    <string name="meal_detail_area">Area: %1$s</string>
    <string name="popular_meal_item_image">Popular Meal Item Image</string>
    <string name="category_image">Category Image</string>
    <string name="meal_image">Meal Image</string>

    <string name="meal_was_deleted">%1$s was deleted!</string>
    <string name="undo">Undo</string>
    <string name="bottom_sheet_image">Bottom Sheet Image</string>
    <string name="read_more">Read More …</string>
</resources>