<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/my_font"
                android:text="@string/home"
                android:textColor="@color/accent"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgSearch"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:contentDescription="@string/search_icon"
                android:src="@drawable/ic_search"
                android:layout_marginEnd="@dimen/_30sdp"
                app:layout_constraintBottom_toBottomOf="@id/tvHome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvHome" />

            <TextView
                android:id="@+id/tvWouldLikeToEat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/my_font"
                android:text="@string/what_would_you_like_to_eat"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvHome"
                app:layout_constraintTop_toBottomOf="@id/tvHome" />

            <androidx.cardview.widget.CardView
                android:id="@+id/randomMealCard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:layout_marginStart="@dimen/_25ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWouldLikeToEat">

                <ImageView
                    android:id="@+id/imgRandomMeal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/random_meal_image" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/refreshCardView"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_margin="@dimen/_5sdp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="@dimen/_8sdp"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="@id/randomMealCard"
                app:layout_constraintEnd_toEndOf="@id/randomMealCard">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_refresh"
                    android:contentDescription="@string/refresh_icon"/>

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/randomMealProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:layout_constraintStart_toStartOf="@id/randomMealCard"
                app:layout_constraintTop_toTopOf="@id/randomMealCard"
                app:layout_constraintBottom_toBottomOf="@id/randomMealCard"
                app:layout_constraintEnd_toEndOf="@id/randomMealCard" />

            <TextView
                android:id="@+id/tvOverPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18ssp"
                android:fontFamily="@font/my_font"
                android:text="@string/over_popular_items"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvWouldLikeToEat"
                app:layout_constraintTop_toBottomOf="@id/randomMealCard" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recViewMealsPopular"
                android:layout_width="0dp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOverPopular" />

            <TextView
                android:id="@+id/tvCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/my_font"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/recViewMealsPopular"
                app:layout_constraintTop_toBottomOf="@id/recViewMealsPopular" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCategories">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recViewCategories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>